# app-blocker-rust

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  promt.json
.github/workflows/: ci.yml
config/: default.toml  production.toml
examples/: README.md  blacklist_bulk.json  blacklist_single.json  blacklist_template.toml  whitelist_bulk.json  whitelist_single.json  whitelist_template.yaml
scripts/: install_service.ps1  running_service.ps1  task_scheduler.bat  uninstall_service.ps1
src/: bootstrap.rs  cli.rs  lib.rs  main.rs  metrics.rs
src/config/: db_loader.rs  db_reload_watcher.rs  env_loader.rs  hot_reload.rs  mod.rs  settings.rs  validator.rs
src/constants/: messages.rs  mod.rs  paths.rs
src/core/: audit.rs  engine.rs  events.rs  mod.rs  monitor.rs  state.rs  watchdog.rs
src/db/: connection.rs  init.rs  mod.rs
src/db/schema/: core.sql  logs.sql
src/detection/: behavior.rs  bypass.rs  game.rs  mod.rs  schedule.rs  scoring.rs
src/models/: blacklist.rs  blacklist_path.rs  blacklist_process.rs  config.rs  log_entity.rs  mod.rs  schedule.rs  schedule_rule.rs  user.rs  whitelist.rs
src/repository/: blacklist_repo.rs  config_repo.rs  log_repo.rs  mod.rs  schedule_repo.rs  user_repo.rs  whitelist_repo.rs
src/security/: auth.rs  encryption.rs  integrity.rs  memory.rs  mod.rs
src/system/: hooks.rs  mod.rs  process.rs  service.rs  student_mode.rs  user.rs
src/tests/: auth_tests.rs  engine_tests.rs  integration_tests.rs  mod.rs  state_tests.rs
src/ui/: components.rs  input.rs  mod.rs  overlay.rs  window.rs
src/utils/: error.rs  logger.rs  mod.rs  retry.rs  time.rs
