[package]
name = "app-blocker"
version = "1.0.0"
edition = "2021"
authors = ["Muhamad Fahmi"]
description = "Production-ready Windows App Blocker"

[lib]
name = "app_blocker"
path = "src/lib.rs"

[[bin]]
name = "app_blocker"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp"
]
}
sysinfo = "0.31"
thiserror = "1.0"
anyhow = "1.0"
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
